docs/refs/script-api/server/1.9.0/blockpistoncomponent.md
# `BlockPistonComponent`

> 文档版本：1.21.0.20

`BlockPistonComponent`类，扩展自[`BlockComponent`](./blockcomponent.md)。

## 常量

/// define
`componentId`


///

```js
static read-only componentId = "minecraft:piston";
```


## 属性

/// define
`isMoving`


///

```js
read-only isMoving: boolean;
```

/// html | div.result
//// define
`isMoving`：`boolean`

- 属性。


////

///


/// define
`state`


///

```js
read-only state: BlockPistonState;
```

/// html | div.result
//// define
`state`：[`BlockPistonState`](./blockpistonstate.md)

- 属性。


////

///


## 方法

/// define
`getAttachedBlocks`


///

```js
getAttachedBlocks(): Block[]
```

/// html | div.result
//// define
返回值：<code><a href="../block/">Block</a>[]</code>

- 返回值。


////

///


/// define
`getAttachedBlocksLocations`


///

```js
getAttachedBlocksLocations(): Vector3[]
```

/// html | div.result
//// define
返回值：<code><a href="../vector3/">Vector3</a>[]</code>

- 返回值。


////

///

